<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="toDo"
            type="com.example.todolist.database.ToDoItem" />
        <variable
            name="viewModel"
            type="com.example.todolist.todolist.ToDoListViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp">

        <CheckBox
            android:id="@+id/checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="@{toDo.done}"
            tools:text="@string/title_dummy"
            android:longClickable="true"
            android:text="@{toDo.title}"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        </CheckBox>

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{toDo.description}"
            android:layout_marginStart="20dp"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/checkbox"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/description_dummy">
        </TextView>

        <TextView
            android:id="@+id/created_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{toDo.date}"
            android:layout_marginStart="20dp"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/checkbox"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="@string/created_date_dummy">
        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>